tests/compile_fail/derive_for_tuple_struct.rs
use check_initial_state_derive::CheckInitialState;

fn main() {}

#[derive(CheckInitialState)]
struct Tuple (i32, Option<i32>);
