tests/compile_fail/derive_for_tuple_struct.stderr
error: `CheckInitialState` procedural macro is allowed for structs with named fields only
 --> $DIR/derive_for_tuple_struct.rs:6:14
  |
6 | struct Tuple (i32, Option<i32>);
  |              ^^^^^^^^^^^^^^^^^^
